@@ -1,3 +1,7 @@
+2011-01-04  Jeff Segars  <jeff@webempoweredchurch.org>
+
+	* Fixed bug #15466: meaningfulTempFilePrefix does not convert Umlauts and special characters (Thanks to Sebastian Michaelsen)
+
 2011-01-01  Susanne Moog  <typo3@susanne-moog.de>
 
 	* Fixed bug #16308: displayEditIcons expects array, null given (Thanks to Daniel Müller)
